src/TypeScript/basura
/home/fsande/.nvm/versions/node/v17.8.0/lib/node_modules/ts-node/src/index.ts:820
    return new TSError(diagnosticText, diagnosticCodes);
           ^
TSError: тип Unable to compile TypeScript:
class-types.ts(25,20): error TS2551: Property 'toJson' does not exist on type 'Person'. Did you mean 'toJSON'?

    at createTSError (/home/fsande/.nvm/versions/node/v17.8.0/lib/node_modules/ts-node/src/index.ts:820:12)
    at reportTSError (/home/fsande/.nvm/versions/node/v17.8.0/lib/node_modules/ts-node/src/index.ts:824:19)
    at getOutput (/home/fsande/.nvm/versions/node/v17.8.0/lib/node_modules/ts-node/src/index.ts:1014:36)
    at Object.compile (/home/fsande/.nvm/versions/node/v17.8.0/lib/node_modules/ts-node/src/index.ts:1322:43)
    at Module.m._compile (/home/fsande/.nvm/versions/node/v17.8.0/lib/node_modules/ts-node/src/index.ts:1454:30)
    at Module._extensions..js (node:internal/modules/cjs/loader:1153:10)
    at Object.require.extensions.<computed> [as .ts] (/home/fsande/.nvm/versions/node/v17.8.0/lib/node_modules/ts-node/src/index.ts:1458:12)
    at Module.load (node:internal/modules/cjs/loader:975:32)
    at Function.Module._load (node:internal/modules/cjs/loader:822:12)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:77:12) {
  diagnosticCodes: [ 2551 ]
}
